--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
+    "razorpay": "^2.9.6",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   }
